--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,38 @@
 body{
-    background-color: #000;
+    margin: 0;
+}
+
+.container{
+    margin-top: 20px;
+}
+
+.top{
+    text-align: center;
+    font-size: 24px;
+    font-family: sans-serif;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.buttons{
+    text-align: center;
+}
+
+.button{
+    padding: 10px;
+    width: 42%;
+    margin: 2px 10px;
+    border: solid 1px #999;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.reset{
+    background-color:rgb(70, 122, 118);
+}
+
+.submit{
+    background-color: rgb(135, 222, 210);
 }
 
 @media screen and (min-width: 960px) {
@@ -7,3 +40,22 @@ body{
         background-color: #999;
     }
 }
+
+.container{
+    background-color: #fff;
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+    padding: 20px;
+}
+
+#username, #password{
+    display: block;
+    width: 88%;
+    margin: 10px auto;
+    padding: 5px;
+    border: solid 1px #999;
+    border-radius: 8px;
+}
+
